Fix CSS formatting and enhance background color for improved visibility

--- a/style.css
+++ b/style.css
@@ -13,12 +13,14 @@ body {
          -moz-user-select: none; /* Old versions of Firefox */
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
-
+              
     background: url("./assets/img/static-background.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
+    background-color: black;
+    
     width: 100vw;
     height: 100vh;
 }
@@ -419,7 +421,7 @@ button:hover, a.styled:hover {
 .repo.archived {
     --mainColor: 235, 160, 10;
     box-shadow: inset 0 -10px 10px -10px rgb(var(--mainColor));
-    
+
     order: 1;
 }
 
